[FEATURE][#903] UI implementation